--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1",
 		"wrangler": "^4.62.0"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.563.0"
 	}
 }
