--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "my-svelte-app",
+	"name": "dincertekin.com",
 	"private": true,
 	"version": "0.0.1",
+	"author": "dincertekin",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
